Added interactive and easy-to-use booking which currently doesn't work because of obscure issue with EF/Postgres where one of them thinks that I'm trying to write timestamp without time zone instead of timestamp with time zone. This difference in timestamp type has cost me an hour of debugging which led to nothing. Instead of crushing my skull against a wall however, I decided to move on and add simple and fake payment pages. Also started working on OrderHistory page.

--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -20,15 +20,15 @@ else
         @if (IsOwner)
         {
             <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
-                <MudButton @onclick="() => currentComponent = AccountComponent.Profile">Профиль</MudButton>
-                <MudButton @onclick="() => currentComponent = AccountComponent.Reviews">Мои отзывы</MudButton>
-                <MudButton @onclick="() => currentComponent = AccountComponent.Notifications">Уведомления</MudButton>
-                <MudButton @onclick="() => currentComponent = AccountComponent.OrderHistory">История заказов</MudButton>
-                <MudButton @onclick="() => currentComponent = AccountComponent.Cart">Корзина</MudButton>
+                <MudButton @onclick="() => CurrentComponent = AccountComponent.Profile">Профиль</MudButton>
+                <MudButton @onclick="() => CurrentComponent = AccountComponent.Reviews">Мои отзывы</MudButton>
+                <MudButton @onclick="() => CurrentComponent = AccountComponent.Notifications">Уведомления</MudButton>
+                <MudButton @onclick="() => CurrentComponent = AccountComponent.OrderHistory">История заказов</MudButton>
+                <MudButton @onclick="() => CurrentComponent = AccountComponent.Cart">Корзина</MudButton>
             </MudButtonGroup>
         }
         
-        @switch (currentComponent)
+        @switch (CurrentComponent)
         {
             case AccountComponent.Profile:
             {
@@ -62,7 +62,7 @@ else
 
 @code
 {
-    private enum AccountComponent
+    public enum AccountComponent
     {
         Profile,
         Reviews,
@@ -80,7 +80,8 @@ else
     [Inject]
     AuthenticationStateProvider AuthStateProvider { get; set; }
 
-    private AccountComponent currentComponent = AccountComponent.Profile;
+    [Parameter]
+    public AccountComponent CurrentComponent { get; set; } = AccountComponent.Profile;
 
     [Parameter] public int id { get; set; }
     protected bool IsOwner = false;
