--- a/Components/App.razor
+++ b/Components/App.razor
@@ -21,6 +21,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js?v=@(MudBlazor.Metadata.Version)"></script>
     <script src="login.js"></script>
     <script src="localStorageHelper.js"></script>
+    <script src="timeline.js"></script>
 </body>
 
 </html>
