--- a/Components/Pages/BarbershopPage.razor
+++ b/Components/Pages/BarbershopPage.razor
@@ -49,7 +49,7 @@ else
                             <MudListItem Text=@job.Name />
                             @if (cart != null)
                             {
-                                <MudButton @onclick="async () => { await OnServiceClicked(job); }" Style=@($"background:{(cart.JobSet.Contains(job) ? "gray" : "black")}; height:min-content;")>@(cart.JobSet.Contains(job) ? "Добавлено" : "")</MudButton>
+                                <MudButton @onclick="async () => { await OnServiceClicked(job); }" Style=@($"background:{(cart.JobSet.Contains(job) ? "gray" : job.ColorCSS)}; height:min-content;")>@(cart.JobSet.Contains(job) ? "Добавлено" : "")</MudButton>
                             }
                         </MudContainer>
                     }
@@ -67,7 +67,9 @@ else
                                 <MudCard>
                                     <MudCardContent>
                                         <MudText Typo="Typo.subtitle1">@barber.Account.Lastname @barber.Account.Restname</MudText>
-                                        <MudImage Src="@AccountPage.GetImageSrc(barber.Account.ProfilePic)" Alt="Barber profile pic" Class="rounded" ObjectFit="ObjectFit.Cover" Style="width:100%;height:auto;" />
+                                        <a href=@($"/account/{barber.AccountId}")>
+                                            <MudImage Src="@AccountPage.GetImageSrc(barber.Account.ProfilePic)" Alt="Barber profile pic" Class="rounded" ObjectFit="ObjectFit.Cover" Style="width:100%;height:auto;" />
+                                        </a>
                                     </MudCardContent>
                                 </MudCard>
                             </MudItem>
@@ -149,9 +151,7 @@ else
     {
         if (firstTime)
         {
-            Console.WriteLine("Loading cart");
             cart = await CartService.GetCart();
-            Console.WriteLine("Cart loaded: " + cart.ToString());
             StateHasChanged();
         }
     }
